@@ -1,11 +1,13 @@
-
 plugins {
     id 'application'
     id 'com.github.spacialcircumstances.gradle-cucumber-reporting' version '0.1.23'
 }
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+java {
+  toolchain {
+    languageVersion = JavaLanguageVersion.of(17)
+  }
+}
 
 // tag::repositories[]
 repositories {
@@ -19,9 +21,9 @@ repositories {
 
 // tag::dependencies[]
 dependencies {
-    testCompile group: 'com.github.hmcts', name: 'ccd-test-definitions', version: '7.0.0'
-    testCompile group: 'com.github.hmcts', name: 'befta-fw', version: '8.7.11'
-    testCompile 'com.github.hmcts:fortify-client:1.3.0:all'
+    testImplementation group: 'com.github.hmcts', name: 'ccd-test-definitions', version: '7.0.0'
+    testImplementation group: 'com.github.hmcts', name: 'befta-fw', version: '8.7.11'
+    testImplementation 'com.github.hmcts:fortify-client:1.3.0:all'
 }
 // end::dependencies[]
 
@@ -39,12 +41,12 @@ sourceSets {
 }
 
 configurations {
-    aatCompile.extendsFrom(testCompile)
+    aatImplementation.extendsFrom(testImplementation)
     cucumberRuntime.extendsFrom(functionalRuntime)
 }
 
-task fortifyScan(type: JavaExec)  {
-    main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+tasks.register('fortifyScan', JavaExec)  {
+    mainClass = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
     classpath += sourceSets.test.runtimeClasspath
     jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
     // The line below prevents the build from failing
@@ -52,14 +54,14 @@ task fortifyScan(type: JavaExec)  {
     ignoreExitValue = true
 }
 
-task highLevelDataSetup(type: JavaExec) {
-    main = "uk.gov.hmcts.ccd.caseactivity.befta.HighLevelDataSetupApp"
+tasks.register('highLevelDataSetup', JavaExec) {
+    mainClass = "uk.gov.hmcts.ccd.caseactivity.befta.HighLevelDataSetupApp"
     classpath += configurations.cucumberRuntime + sourceSets.aat.runtimeClasspath
     jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
 }
 
 
-task smoke(type: Test) {
+tasks.register('smoke', Test) {
   description = 'Executes smoke tests against an the CCD Case Activity API instance just deployed'
   setTestClassesDirs(sourceSets.aat.output.classesDirs)
 
@@ -68,6 +70,7 @@ task smoke(type: Test) {
     javaexec {
       main = "uk.gov.hmcts.ccd.caseactivity.befta.CaseActivityBeftaMain"
       classpath += configurations.cucumberRuntime + sourceSets.aat.runtimeClasspath + sourceSets.main.output + sourceSets.test.output
+      jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
       args = ['--plugin', "json:${rootDir}/target/cucumber.json", '--tags', '@Smoke', '--glue',
               'uk.gov.hmcts.befta.player', 'src/resources/features']
     }
@@ -85,7 +88,7 @@ task smoke(type: Test) {
   outputs.upToDateWhen { false }
 }
 
-task functional(type: Test) {
+tasks.register('functional', Test) {
   description = 'Executes functional tests against an the CCD Case Activity API instance just deployed'
   setTestClassesDirs(sourceSets.aat.output.classesDirs)
 
@@ -94,6 +97,7 @@ task functional(type: Test) {
     javaexec {
       main = "uk.gov.hmcts.ccd.caseactivity.befta.CaseActivityBeftaMain"
       classpath += configurations.cucumberRuntime + sourceSets.aat.runtimeClasspath + sourceSets.main.output + sourceSets.test.output
+      jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
       args = ['--plugin', "json:${rootDir}/target/cucumber.json", '--tags', 'not @Ignore', '--glue',
               'uk.gov.hmcts.befta.player', 'src/resources/features']
     }
